--- a/exercise-3/package.json
+++ b/exercise-3/package.json
@@ -2,11 +2,14 @@
     "name": "eightball-application",
     "version": "0.0.0",
     "scripts": {
-        "start": "node ./server/server.js"
+        "start": "nodemon ./workarea/server/server.js"
     },
     "dependencies": {
         "body-parser": "^1.19.1",
         "express": "^4.17.2",
         "morgan": "^1.10.0"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.15"
     }
 }
